# TEJASRI

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
aws/lambda/nightly_job/: README.md  handler.py
backend/: README.md  pyproject.toml
backend/src/tejasri/: __init__.py  cli.py  main.py
backend/src/tejasri/api/: __init__.py  deps.py
backend/src/tejasri/api/v1/: agent.py  auth.py  care_plans.py  health.py  notes.py  patients.py  tasks.py  timeline.py
backend/src/tejasri/application/: __init__.py  agent_service.py  auth_service.py  care_plan_service.py  memory_service.py  patient_service.py  task_service.py  timeline_service.py
backend/src/tejasri/core/: __init__.py  config.py  errors.py  logging.py  metrics.py  ratelimit.py
backend/src/tejasri/domain/: __init__.py  entities.py  interfaces.py  safety.py
backend/src/tejasri/infrastructure/: __init__.py  aws.py  embeddings.py  llm.py
backend/src/tejasri/infrastructure/db/: __init__.py  migrator.py  pool.py
backend/src/tejasri/infrastructure/db/migrations/: 0001_tenants_users.sql  0002_memory_core.sql  0003_row_level_security.sql  __init__.py
backend/src/tejasri/infrastructure/repositories/: __init__.py  accounts.py  memory.py  patients.py  workflows.py
backend/src/tejasri/infrastructure/safety_data/: __init__.py  interactions.json  loader.py
backend/src/tejasri/infrastructure/security/: __init__.py  passwords.py  tokens.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_api_flow.py  test_memory.py  test_migrations.py  test_rls_isolation.py  test_workflows.py
backend/tests/unit/: fakes.py  test_agent_service.py  test_auth_service.py  test_config.py  test_embeddings.py  test_hardening.py  test_health.py  test_llm_failover.py  test_patient_service.py  test_safety_engine.py  test_security.py  test_task_service.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DESIGN_DECISIONS.md  DEVELOPMENT.md  DISASTER_RECOVERY.md  ENGINEERING.md  ENVIRONMENT_VARIABLES.md  MEMORY_SYSTEM.md  OBSERVABILITY.md  ROADMAP.md  TESTING.md  TROUBLESHOOTING.md
docs/adr/: 0001-cockroachdb-as-sole-memory-layer.md  0002-clean-architecture-fastapi.md  0003-provider-agnostic-llm.md  0004-deterministic-safety-engine.md  0005-synthetic-data-only.md  0006-least-privilege-app-user.md
docs/hackathon/: JUDGE_WALKTHROUGH.md
frontend/: README.md  index.html  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: AgentChat.tsx  CarePlanPanel.tsx  Layout.tsx  NotesPanel.tsx  SafetyReportView.tsx  TasksPanel.tsx  TimelinePanel.tsx  ui.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: Login.tsx  PatientDetail.tsx  Patients.tsx
scripts/: demo_resilience.py  load_test.py
