[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tejasri"
version = "0.1.0"
description = "TEJASRI — Healthcare Memory Platform: longitudinal medication-adherence & care-continuity agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.8",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "asyncpg>=0.29",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tejasri = ["py.typed", "infrastructure/db/migrations/*.sql"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "B",         # bugbear
    "UP",        # pyupgrade
    "S",         # bandit (security)
    "N",         # naming
    "C4",        # comprehensions
    "SIM",       # simplify
    "RET",       # return
    "PTH",       # pathlib
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # asserts and dummy credentials are the point of tests

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["tejasri"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires external services (CockroachDB via Docker)",
]
